/*
 * Copyright 2022 Thoughtworks, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

plugins {
  id 'java'
}
apply from: "https://raw.githubusercontent.com/gocd/gocd-plugin-gradle-task-helpers/master/helper.gradle?_=${(int) (new Date().toInstant().epochSecond / 60)}"

gocdPlugin {
  id = 'com.thoughtworks.gocd.secretmanager.aws'
  pluginVersion = '3.0.0'
  goCdVersion = '26.2.0'
  name = 'AWS Secrets Manager based secrets plugin for GoCD'
  description = 'AWS Secrets Manager based secrets plugin for GoCD'
  vendorName = 'Thoughtworks, Inc.'
  vendorUrl = 'https://github.com/gocd/gocd-aws-based-secrets-plugin'

  githubRepo {
    owner = System.getenv('GITHUB_USER') ?: 'bob'
    repo = 'gocd-aws-based-secrets-plugin'
    token = System.getenv('GITHUB_TOKEN') ?: 'bad-token'
  }

  pluginProject = project

  prerelease = !"No".equalsIgnoreCase(System.getenv('PRERELEASE'))
  prereleaseDryrun = !"Yes".equalsIgnoreCase(System.getenv('PRERELEASE'))
  assetsToRelease = [project.tasks.findByName('jar')]
}

version = gocdPlugin.fullVersion(project)

repositories {
  mavenCentral()
}

java {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
  options.release = 21
}

ext {
  deps = [
    gocdPluginApi : 'cd.go.plugin:go-plugin-api:26.1.0',
    gocdPluginBase: 'cd.go.plugin.base:gocd-plugin-base:2.0.1',
  ]

  versions = project.ext.deps.collectEntries { lib, libGav -> [lib, libGav.split(':').last()] }
}

dependencies {
  compileOnly project.deps.gocdPluginApi
  implementation project.deps.gocdPluginBase
  implementation platform('software.amazon.awssdk:bom:2.47.6')
  implementation('com.amazonaws.secretsmanager:aws-secretsmanager-caching-java:2.2.0') {
    exclude module: 'netty-nio-client' // Not using async interactions right now.
    exclude module: 'aws-crt-client' // Huge and native; and only needed for post-quantum crypto
    exclude module: 'spotbugs-annotations' // shouldn't be needed at runtime
  }

  testImplementation platform('org.junit:junit-bom:6.1.2')
  testImplementation 'org.junit.jupiter:junit-jupiter-api'
  testImplementation 'org.junit.jupiter:junit-jupiter-params'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  testImplementation 'org.assertj:assertj-core:3.27.7'
  testImplementation 'org.mockito:mockito-core:5.23.0'
  testImplementation 'org.jsoup:jsoup:1.22.2'
  testImplementation project.deps.gocdPluginApi
  testImplementation(testFixtures(project.deps.gocdPluginBase))
  testImplementation 'org.skyscreamer:jsonassert:1.5.3'
  testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.1.8'
}


test {
  useJUnitPlatform()
}

jar {
  from(configurations.runtimeClasspath) {
    into "lib/"
  }
}
